setup for MySQL database

--- a/SocialBookApp.API/appsettings.Development.json
+++ b/SocialBookApp.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=socialbookapp.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
